--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -21,6 +21,7 @@ jobs:
         uses: actions/checkout@v2
       - name: Generate distribution tarball
         run: |
+          mkdir -p dist
           make dist-tar
           sudo mv *.tar.gz dist/
         env:
